# AI_FX_Station

./: .env.example  .gitignore  =0.2.0  ACTION_PLAN_2025-10-06.md  AGENTS.md  ANALISI_COMPLETA_E_TASK_AGENTIC.md  API_README.md  AUTOTRADING_AND_BACKTESTING.md  BACKTESTING_STACK.md  CHANGELOG_TRAINING_UI.md  CHART_TAB_REFACTORING.md  CLAUDE_CODE_COMPLETE_IMPLEMENTATION.txt  CLAUDE_CODE_COMPLETE_IMPLEMENTATIONdef.txt  CLAUDE_CODE_ENHANCEMENTS.txt  CLAUDE_CODE_TASKS.txt  CLAUDE_IMPLEMENTATION_COMPLETE.md  COMPLETE_SYSTEM_ARCHITECTURE.drawio  COMPLETE_SYSTEM_REVIEW_2025-10-06.md  CRITICAL_ISSUES_ANALYSIS.md  DEPRECATION_NOTICE.md  DIFFUSERS_UPGRADE_ANALYSIS.md  DOCUMENTATION_SESSION_SUMMARY.md  Development_Journal.md  Dockerfile  E2E_OPTIMIZATION_COMPLETE.md  ENHANCED_MULTI_HORIZON_EXPLAINED.md  FAKE_IMPLEMENTATIONS.md  FINAL_IMPLEMENTATION_REPORT.md  FINPLOT_INTEGRATION_COMPLETE.md  FINPLOT_MIGRATION_GUIDE.md  FORECAST_ANALYSIS.md  FORECAST_PIPELINE_FIX.md  ForexGPT.rar  FxPro_Migration.txt  GPU_ACCELERATION_PLAN.md  GUI_RESTRUCTURE_COMPLETE.md  I18N_FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_FINAL.md  IMPLEMENTATION_I18N.md  (+133 more)
.claude/: settings.local.json
ANALYSIS/: AI+Patterns+HRM.md  Analisys_AutoTrading_lacks.md  Complete_UI_Parameters_Reference.md  EXECUTIVE_SUMMARY.md  Financial_Performance.md  Integration_Architecture_Analysis.md  MIGRATION_ISSUES.md  Manual_Test_E2E.md  QUICK_REFERENCE.md  README.md  Risk_Mitigation.md  SSSD_Technology_Evaluation_2025-10-07.md  TOOLTIP_TEMPLATE.md  UI_Migration.md  market_depts.md  trading_engine_optimization_e2e.md  updating_components.txt
Documentation/: 0_General_Structure.md  1_Generative_Forecast.md  2_Pattern_Recognition.md  3_Trading_Engine.md
PROGRESS/: Session_4_Progress.md
PROJECTIONS/: Performance_Scenarios_Analysis_2025-10-07.md
REVIEWS/: 1_Generative_Forecast_Implemented.md  2_PatternRecognition.md  3_Trading_Engine.md  4_Integration_Architecture.md  CLAUDE_Review_of_Codex_10-07.md  CODEX_Review_of_CSR_10-07.md  CTrader_API_Setup_Guide.md  Dead_Code_Analysis.md  E2E_test_implemented.md  FASE_10_Code_Consolidation_Report.md  Feature_Pipeline_Analysis.md  Feature_Pipeline_Fixes_Log.md  Feature_Pipeline_Refactoring_Complete.md  GUI_Deep_Analysis.md  Import_Refactoring_ISSUE-002.md  MarketData_Services_Analysis.md  MarketData_Services_Implementation.md  MarketData_Services_Phase2.md  MarketData_Services_Phase3.md  Model_Types_Quick_Analysis.md  NVIDIA_Quick_Wins_Summary.md  NVIDIA_Stack_Usage_Analysis.md  New_Trading_System_Final_Report.md  New_Trading_implemented.md  P1_Refactoring_Plan.md  S4D_Integration_analysis.md  S4D_Integration_specifications.md  Session_2_Progress.md  Session_3_Progress.md  Training_Decision_Matrix.md  Training_Infrastructure_Analysis.md  UI_Migration_implemented.md  Vectorization_Verification.md  WebSocket_Executive_Summary.md  WebSocket_Integration_Analysis.md  WebSocket_QuickFix_Guide.md  WebSocket_Root_Cause_Analysis.md  market_depths.md  sentiment_integration_verification.md
SPECS/: 1_Generative_Forecast.txt  2_PatternRecognition.txt  3_Trading_Engine.txt  4_Integration_Architecture.txt  AI+Patterns+HRM.txt  AutoTrading_lacks_impl.txt  CLAUDE_Integrated_Implemented_10-07.md  CLAUDE_Integrated_Specs_10-07.md  CODEX_Integrated_Specs_10-07.md  E2E_test_specifications.txt  Missing Features_Specs_10-07.md  Missing Features_Specs_10-07.txt  New_AI_Training_Implementation_Status.md  New_AI_Training_Implemented_10-07.md  New_AI_Training_Specs_10-07.md  New_Trading_Specs_10-07.md  S4D_Complete_All_Phases.md  S4D_Final_Verification_Report.md  S4D_Integration_Implemented_10-07.md  S4D_Phase2_Complete.md  S4D_Verification_Checklist.md  Two-Phase_Training_User_Guide.md  UI_Migration_SUMMARY.md  UI_Migration_specifications.txt  Verification_Report_10-07.md  Verification_Report_10-07_FINAL.md  market_depts.txt  trading_engine_optimization_e2e.txt
VectorBt_PRO/: vectorbtpro-2025.10.15-py3-none-any.whl  vectorbtpro-2025.7.27-py3-none-any.whl
chart_system_backup/: backup_info.json  plot_service_backup_20250929_160125.py
configs/: default.yaml  indicators.json  pattern_boundaries.json  pattern_info.json  patterns.yaml  prediction_settings.json  sssd_settings.json
docker/: entrypoint.sh
docs/: 3D_Reports_User_Guide.md  ARCHITECTURE.md  CTRADER_DUAL_CONNECTION.md  CTRADER_INSTALLATION.md  DATABASE.md  DECISIONS.md  Gemini_proficiency.md  LDM4TS_MEMORY_OPTIMIZATION.md  LDM4TS_TRAINING_VS_INFERENCE.md  ML_DATA_FLOW.md  MODELS_COMPARISON.md  PERFORMANCE_FIX_CHARTTAB.md  PROVIDERS.md  SESSION_SUMMARY_DOM_PERFORMANCE.md  SSSD_USAGE_GUIDE.md  Sistema_previsionale.md  Trading_Engine_Analysis.md  VectorBT_Pro_Integration_Analysis.md  codex_pipeliones_analysis.md  ctrader_integration_status.md  diagramma_flusso_e2e.drawio  diagramma_flusso_e2e.md  gemini_full_explanation.md  llms-docs.txt  portfolio_optimization_integration.md
examples/: backtest_ldm4ts_example.py  production_setup_phase4.py  regime_aware_pattern_optimization.py  resumable_optimization_example.py  sentiment_calendar_integration_example.py  train_ldm4ts_example.py  walk_forward_validation_example.py
migrations/: MIGRATION_IMPROVEMENTS.md  env.py  script.py.mako
models/: README.md
scripts/: STREAMING_README.md  auto_tune.py  backfill_via_service.ps1  benchmark_bulk.py  build_regime_index.py  check_alphavantage.py  check_candles.ps1  check_dom_frequency.py  check_hurst_debug.ps1  ci_check_metrics.py  count_candle_duplicates.py  create_ldm4ts_test_checkpoint.py  do_all.sh  export_diffusion_wrapper.py  fix_checkpoint_paths.py  generate_financial_report_pdf.py  get_ctrader_token.py  init_risk_profiles.py  launch_gui.ps1  launch_gui.py  migrate_tooltips.py  ml_workflow_check.ps1  reset_db.ps1  reset_db.py  run_backfill_and_check.ps1  run_gui.py  send_and_check_signals.py  setup_and_run.ps1  setup_and_run.sh  simulate_ui_interactions.py  smoke_ui.py  standardize_imports.py  start_backtest_worker.py  start_realtime.py  test_ctrader_dom_subscription.py  test_patterns.py  test_tiingo.py  verify_backfill_and_process.py  (+2 more)
(+591 files in other folders)
